Started adding the groundwork for handling url parameters.
ISubmissionNameValuePair and ICommentNameValuePair are marker interfaces that will be used by their respective search providers to filter what are valid/invalid INameValuePair objects for the queries they generate.

The pushshift.io api accept a few kinds of url parameter value types, the StringValueParameter, IntValueParameter and MultiValueParameter base classes will allow enforced type safety for ValueParameter objects.

--- a/PushSharp/PushSharp.csproj
+++ b/PushSharp/PushSharp.csproj
@@ -49,10 +49,18 @@
     <Compile Include="Data\UserContent.cs" />
     <Compile Include="Reddit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search\MultiValueParameter.cs" />
+    <Compile Include="Search\SingleValueParameter.cs" />
+    <Compile Include="Search\ValueParameter.cs" />
+    <Compile Include="StringExtensions.cs" />
+    <Compile Include="Web\CommentSearchAgent.cs" />
+    <Compile Include="Search\ICommentNameValuePair.cs" />
+    <Compile Include="Search\INameValuePair.cs" />
+    <Compile Include="Search\ISubmissionNameValuePair.cs" />
+    <Compile Include="Web\SearchAgent.cs" />
+    <Compile Include="Web\SubmissionSearchAgent.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Web\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
