--- a/PushSharp/PushSharp.csproj
+++ b/PushSharp/PushSharp.csproj
@@ -47,11 +47,56 @@
     <Compile Include="Data\Comment.cs" />
     <Compile Include="Data\Submission.cs" />
     <Compile Include="Data\UserContent.cs" />
+    <Compile Include="DateTimeExtensions.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
+    <Compile Include="EnumExtensions.cs" />
     <Compile Include="Reddit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Search\MultiValueParameter.cs" />
-    <Compile Include="Search\SingleValueParameter.cs" />
-    <Compile Include="Search\ValueParameter.cs" />
+    <Compile Include="Search\Query\BooleanValueParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\AfterIdParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\AfterParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\AuthorFlairCssClassParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\AuthorFlairTextParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\AuthorParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\BeforeIdParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\BeforeParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\CreatedUtcParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\DistinguishedEnumParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\EditedParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\EnumToStringValueAttribute.cs" />
+    <Compile Include="Search\Query\PrefabParameters\GildedParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\HtmlDecodeParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\IdParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\LastUpdatedParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\LinkIdParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\ModRemovedParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\NestLevelParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\ParentIdParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\PermalinkParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\PrettyParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\QueryParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\ReplyDelayParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\RetrievedParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\ScoreParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\SortEnumValueParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\EnumValueParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\SortTypeEnumValueParameter.cs" />
+    <Compile Include="Search\Query\EpochValueParameter.cs" />
+    <Compile Include="Search\Query\IntValueParameter.cs" />
+    <Compile Include="Search\ISearchAgent.cs" />
+    <Compile Include="Search\Query\MultiValueParameter.cs" />
+    <Compile Include="Search\Query\BaseSearchQuery.cs" />
+    <Compile Include="Search\Query\CommentSearchQuery.cs" />
+    <Compile Include="Search\Query\FlagValueParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\SubredditParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\SubredditTypeParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\SubReplyDelayParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\UniqueParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\UserRemovedParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\UtcHourOfWeekParameter.cs" />
+    <Compile Include="Search\Query\SubmissionSearchQuery.cs" />
+    <Compile Include="Search\Query\StringValueParameter.cs" />
+    <Compile Include="Search\Query\ValueParameter.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="Web\CommentSearchAgent.cs" />
     <Compile Include="Search\ICommentNameValuePair.cs" />
