Added a limit parameter, to allow for specifying the number of objects that the pushshift api should return.
Started adding some comments to some of the ValueParameter objects.

Added some exceptions to the RedditSearchAgent GetResults method for a few expected failure cases.

--- a/PushSharp/PushSharp.csproj
+++ b/PushSharp/PushSharp.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Reddit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search\Query\BooleanValueParameter.cs" />
+    <Compile Include="Search\Query\PrefabParameters\LimitParameter.cs" />
     <Compile Include="Search\Query\PrefabParameters\AfterIdParameter.cs" />
     <Compile Include="Search\Query\PrefabParameters\AfterParameter.cs" />
     <Compile Include="Search\Query\PrefabParameters\AuthorFlairCssClassParameter.cs" />
@@ -102,7 +103,7 @@
     <Compile Include="Search\ICommentNameValuePair.cs" />
     <Compile Include="Search\INameValuePair.cs" />
     <Compile Include="Search\ISubmissionNameValuePair.cs" />
-    <Compile Include="Web\SearchAgent.cs" />
+    <Compile Include="Web\RedditSearchAgent.cs" />
     <Compile Include="Web\SubmissionSearchAgent.cs" />
   </ItemGroup>
   <ItemGroup />
