--- a/PushSharp/PushSharp.csproj
+++ b/PushSharp/PushSharp.csproj
@@ -50,7 +50,7 @@
     <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="EnumExtensions.cs" />
-    <Compile Include="Reddit.cs" />
+    <Compile Include="PushshiftApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search\Query\BooleanValueParameter.cs" />
     <Compile Include="Search\Query\PrefabParameters\LimitParameter.cs" />
@@ -99,12 +99,12 @@
     <Compile Include="Search\Query\StringValueParameter.cs" />
     <Compile Include="Search\Query\ValueParameter.cs" />
     <Compile Include="StringExtensions.cs" />
-    <Compile Include="Web\CommentSearchAgent.cs" />
     <Compile Include="Search\ICommentNameValuePair.cs" />
     <Compile Include="Search\INameValuePair.cs" />
     <Compile Include="Search\ISubmissionNameValuePair.cs" />
+    <Compile Include="Web\BasicHttpContentDownloader.cs" />
+    <Compile Include="Web\IRetrieveHttpContent.cs" />
     <Compile Include="Web\RedditSearchAgent.cs" />
-    <Compile Include="Web\SubmissionSearchAgent.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
