Fixed the name of RetrievedOnParameter.
Fixed a mission conversion for PrettyParameter.

Added comments to all the PrefabParameters.

Renamed the PrefabParameters namespace to RedditParameters

--- a/PushSharp/PushSharp.csproj
+++ b/PushSharp/PushSharp.csproj
@@ -53,35 +53,35 @@
     <Compile Include="PushshiftApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search\Query\BooleanValueParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\LimitParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\AfterIdParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\AfterParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\AuthorFlairCssClassParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\AuthorFlairTextParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\AuthorParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\BeforeIdParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\BeforeParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\CreatedUtcParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\DistinguishedEnumParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\EditedParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\EnumToStringValueAttribute.cs" />
-    <Compile Include="Search\Query\PrefabParameters\GildedParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\HtmlDecodeParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\IdParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\LastUpdatedParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\LinkIdParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\ModRemovedParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\NestLevelParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\ParentIdParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\PermalinkParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\PrettyParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\QueryParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\ReplyDelayParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\RetrievedParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\ScoreParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\SortEnumValueParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\EnumValueParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\SortTypeEnumValueParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\LimitParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\AfterIdParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\AfterParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\AuthorFlairCssClassParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\AuthorFlairTextParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\AuthorParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\BeforeIdParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\BeforeParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\CreatedUtcParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\DistinguishedEnumParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\EditedParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\EnumToStringValueAttribute.cs" />
+    <Compile Include="Search\Query\RedditParameters\GildedParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\HtmlDecodeParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\IdParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\LastUpdatedParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\LinkIdParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\ModRemovedParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\NestLevelParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\ParentIdParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\PermalinkParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\PrettyParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\QueryParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\ReplyDelayParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\RetrievedParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\ScoreParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\SortEnumValueParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\EnumValueParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\SortTypeEnumValueParameter.cs" />
     <Compile Include="Search\Query\EpochValueParameter.cs" />
     <Compile Include="Search\Query\IntValueParameter.cs" />
     <Compile Include="Search\ISearchAgent.cs" />
@@ -89,12 +89,12 @@
     <Compile Include="Search\Query\BaseRedditSearchQuery.cs" />
     <Compile Include="Search\Query\CommentSearchQuery.cs" />
     <Compile Include="Search\Query\FlagValueParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\SubredditParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\SubredditTypeParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\SubReplyDelayParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\UniqueParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\UserRemovedParameter.cs" />
-    <Compile Include="Search\Query\PrefabParameters\UtcHourOfWeekParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\SubredditParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\SubredditTypeParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\SubReplyDelayParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\UniqueParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\UserRemovedParameter.cs" />
+    <Compile Include="Search\Query\RedditParameters\UtcHourOfWeekParameter.cs" />
     <Compile Include="Search\Query\SubmissionSearchQuery.cs" />
     <Compile Include="Search\Query\StringValueParameter.cs" />
     <Compile Include="Search\Query\ValueParameter.cs" />
