--- a/PushSharp/PushSharp.csproj
+++ b/PushSharp/PushSharp.csproj
@@ -47,12 +47,12 @@
     <Compile Include="Data\Comment.cs" />
     <Compile Include="Data\Submission.cs" />
     <Compile Include="Data\UserContent.cs" />
-    <Compile Include="DateTimeExtensions.cs" />
-    <Compile Include="EnumerableExtensions.cs" />
-    <Compile Include="EnumExtensions.cs" />
+    <Compile Include="Extensions\DateTimeExtensions.cs" />
+    <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="PushshiftApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Search\Query\BooleanValueParameter.cs" />
+    <Compile Include="Search\Query\BaseParameters\BooleanValueParameter.cs" />
     <Compile Include="Search\Query\RedditParameters\LimitParameter.cs" />
     <Compile Include="Search\Query\RedditParameters\AfterIdParameter.cs" />
     <Compile Include="Search\Query\RedditParameters\AfterParameter.cs" />
@@ -82,13 +82,13 @@
     <Compile Include="Search\Query\RedditParameters\SortEnumValueParameter.cs" />
     <Compile Include="Search\Query\RedditParameters\EnumValueParameter.cs" />
     <Compile Include="Search\Query\RedditParameters\SortTypeEnumValueParameter.cs" />
-    <Compile Include="Search\Query\EpochValueParameter.cs" />
-    <Compile Include="Search\Query\IntValueParameter.cs" />
+    <Compile Include="Search\Query\BaseParameters\EpochValueParameter.cs" />
+    <Compile Include="Search\Query\BaseParameters\IntValueParameter.cs" />
     <Compile Include="Search\ISearchAgent.cs" />
-    <Compile Include="Search\Query\MultiValueParameter.cs" />
+    <Compile Include="Search\Query\BaseParameters\MultiValueParameter.cs" />
     <Compile Include="Search\Query\BaseRedditSearchQuery.cs" />
     <Compile Include="Search\Query\CommentSearchQuery.cs" />
-    <Compile Include="Search\Query\FlagValueParameter.cs" />
+    <Compile Include="Search\Query\BaseParameters\FlagValueParameter.cs" />
     <Compile Include="Search\Query\RedditParameters\SubredditParameter.cs" />
     <Compile Include="Search\Query\RedditParameters\SubredditTypeParameter.cs" />
     <Compile Include="Search\Query\RedditParameters\SubReplyDelayParameter.cs" />
@@ -96,9 +96,9 @@
     <Compile Include="Search\Query\RedditParameters\UserRemovedParameter.cs" />
     <Compile Include="Search\Query\RedditParameters\UtcHourOfWeekParameter.cs" />
     <Compile Include="Search\Query\SubmissionSearchQuery.cs" />
-    <Compile Include="Search\Query\StringValueParameter.cs" />
-    <Compile Include="Search\Query\ValueParameter.cs" />
-    <Compile Include="StringExtensions.cs" />
+    <Compile Include="Search\Query\BaseParameters\StringValueParameter.cs" />
+    <Compile Include="Search\Query\BaseParameters\ValueParameter.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Search\ICommentNameValuePair.cs" />
     <Compile Include="Search\INameValuePair.cs" />
     <Compile Include="Search\ISubmissionNameValuePair.cs" />
